--- a/dn1/dn1.ipynb
+++ b/dn1/dn1.ipynb
@@ -97,7 +97,7 @@
    "source": [
     "## 1.1 Ročno\n",
     "\n",
-    "Ročno bomo uporabili random forest. Uporabljam impementacijo `LightGBM` za drevesa in `ray` za hyperoptimizacijo parametrov."
+    "Ročno bom preizkusil drevesa, najbližje sosede in svm. Za radnom forest uporabljam impementacijo `LightGBM` za drevesa in `ray` za hyperoptimizacijo parametrov."
    ]
   },
   {
