final edit (scatter plot)

--- a/dn1/meta_ucenje.ipynb
+++ b/dn1/meta_ucenje.ipynb
@@ -164,13 +164,14 @@
    "source": [
     "from pymfe.mfe import MFE\n",
     "\n",
-    "# mfe = MFE(groups=[\"general\", \"statistical\"])\n",
-    "mfe = MFE(features=meta_features)\n",
+    "mfe = MFE(groups=[\"general\", \"statistical\", \"info-theory\", \"complexity\"])\n",
+    "#mfe = MFE(features=meta_features)\n",
     "X = data.drop(columns=['y']).to_numpy()\n",
     "y = data['y'].to_numpy()\n",
     "mfe.fit(X,y)\n",
     "\n",
     "attribute_names, attribute_values = mfe.extract()\n",
+    "meta_features = attribute_names\n",
     "\n",
     "print(list(zip(attribute_names, attribute_values)))\n",
     "# used meta features"
@@ -7568,11 +7569,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import NearestNeighbors\n",
+    "# pogledali bomo 4 najbližje sosede, ker je en sosed nedokumentiran\n",
     "knn = NearestNeighbors(n_neighbors=3)\n",
     "knn.fit(X=meta_space, y=meta_space_indexes)\n",
     "\n",
@@ -7584,9 +7586,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id:  1504\n",
+      "OpenML Dataset\n",
+      "==============\n",
+      "Name..........: steel-plates-fault\n",
+      "Version.......: 1\n",
+      "Format........: ARFF\n",
+      "Upload Date...: 2015-05-25 22:42:40\n",
+      "Licence.......: Public\n",
+      "Download URL..: https://api.openml.org/data/v1/download/1592296/steel-plates-fault.arff\n",
+      "OpenML URL....: https://www.openml.org/d/1504\n",
+      "# of features.: 34\n",
+      "# of instances: 1941\n",
+      "\n",
+      "id:  44383\n",
+      "OpenML Dataset\n",
+      "==============\n",
+      "Name..........: pol_seed_1_nrows_2000_nclasses_10_ncols_100_stratify_True\n",
+      "Version.......: 1\n",
+      "Format........: arff\n",
+      "Upload Date...: 2022-11-17 17:57:01\n",
+      "Licence.......: Public\n",
+      "Download URL..: https://api.openml.org/data/v1/download/22111145/pol_seed_1_nrows_2000_nclasses_10_ncols_100_stratify_True.arff\n",
+      "OpenML URL....: https://www.openml.org/d/44383\n",
+      "# of features.: 27\n",
+      "# of instances: 2000\n",
+      "\n",
+      "id:  44386\n",
+      "OpenML Dataset\n",
+      "==============\n",
+      "Name..........: pol_seed_4_nrows_2000_nclasses_10_ncols_100_stratify_True\n",
+      "Version.......: 1\n",
+      "Format........: arff\n",
+      "Upload Date...: 2022-11-17 17:57:16\n",
+      "Licence.......: Public\n",
+      "Download URL..: https://api.openml.org/data/v1/download/22111148/pol_seed_4_nrows_2000_nclasses_10_ncols_100_stratify_True.arff\n",
+      "OpenML URL....: https://www.openml.org/d/44386\n",
+      "# of features.: 27\n",
+      "# of instances: 2000\n",
+      "\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -7604,66 +7651,11 @@
     "\n",
     "# algoritmi: \n",
     "for index in indexes:\n",
-    "    dataset = all_datasets[index]"
+    "    dataset = all_datasets[index]\n",
+    "    print('id: ', dataset.id)\n",
+    "    print(dataset, end=\"\\n\\n\")\n",
+    "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('mean',\n",
-       " 'nanmean',\n",
-       " 'sd',\n",
-       " 'nansd',\n",
-       " 'var',\n",
-       " 'nanvar',\n",
-       " 'count',\n",
-       " 'nancount',\n",
-       " 'histogram',\n",
-       " 'nanhistogram',\n",
-       " 'iq_range',\n",
-       " 'naniq_range',\n",
-       " 'kurtosis',\n",
-       " 'nankurtosis',\n",
-       " 'max',\n",
-       " 'nanmax',\n",
-       " 'median',\n",
-       " 'nanmedian',\n",
-       " 'min',\n",
-       " 'nanmin',\n",
-       " 'quantiles',\n",
-       " 'nanquantiles',\n",
-       " 'range',\n",
-       " 'nanrange',\n",
-       " 'skewness',\n",
-       " 'nanskewness',\n",
-       " 'sum',\n",
-       " 'nansum',\n",
-       " 'powersum',\n",
-       " 'pnorm',\n",
-       " 'nanpowersum',\n",
-       " 'nanpnorm')"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "MFE.valid_summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
