--- a/meta-učenje/vaje4.ipynb
+++ b/meta-učenje/vaje4.ipynb
@@ -61,7 +61,9 @@
     "            max_evals=N,\n",
     "            trials=trials)\n",
     "\n",
+    "# the following line could be avoided by setting 'return_argmin=False' in fmin(...)\n",
     "best = space_eval(prostor, best)\n",
+    "\n",
     "best_value = kriterijska_funkcija(best)\n",
     "# vse vrednosti paramtrov in kriterijske funkcije, ki smo jih preizkusili\n",
     "xs = [trial[\"misc\"][\"vals\"][\"x\"][0] for trial in trials.trials]\n",
@@ -124,9 +126,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_182910/2302528506.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mn_znacilk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_primerov\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_znacilk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_znacilk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
     "n_primerov = 1000\n",
     "n_znacilk = 5\n",
@@ -137,7 +151,8 @@
     "povprecje = np.mean(y)\n",
     "pozitivni = y >= povprecje\n",
     "y[pozitivni] = 1\n",
-    "y[~pozitivni] = 0"
+    "y[~pozitivni] = 0\n",
+    "y"
    ]
   },
   {
@@ -428,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
