--- a/dn1/porocilo.tex
+++ b/dn1/porocilo.tex
@@ -14,6 +14,7 @@
 \title{Poročilo - domača naloga 1}
 \author{Urh Primožič}
 \maketitle
-\section{Izbira metode in optimizacija hiperparametrov}
+\section{Izbira metode in optimizacija parametrov}
+
 
 \end{document}
