final ungly push uglyyyyyyyyyyy

--- a/dn1/meta_ucenje.ipynb
+++ b/dn1/meta_ucenje.ipynb
@@ -7146,6 +7146,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "ms = pd.read_parquet('parquet/meta_space_df')\n",
+    "ms.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
    "outputs": [],
