--- a/navadne-in-grafovske-nn/vajeGU_1_resitve.ipynb
+++ b/navadne-in-grafovske-nn/vajeGU_1_resitve.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,33 +154,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2708, 1433])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 010, Loss: 1.7228\n",
-      "Epoch: 020, Loss: 1.2460\n",
-      "Epoch: 030, Loss: 0.9749\n",
-      "Epoch: 040, Loss: 0.8719\n",
-      "Epoch: 050, Loss: 0.8392\n",
-      "Epoch: 060, Loss: 0.8115\n",
-      "Epoch: 070, Loss: 0.6376\n",
-      "Epoch: 080, Loss: 0.5263\n",
-      "Epoch: 090, Loss: 0.5820\n",
-      "Epoch: 100, Loss: 0.5041\n",
-      "Epoch: 110, Loss: 0.4689\n",
-      "Epoch: 120, Loss: 0.6011\n",
-      "Epoch: 130, Loss: 0.6125\n",
-      "Epoch: 140, Loss: 0.4876\n",
-      "Epoch: 150, Loss: 0.4457\n",
-      "Epoch: 160, Loss: 0.4897\n",
-      "Epoch: 170, Loss: 0.4987\n",
-      "Epoch: 180, Loss: 0.4558\n",
-      "Epoch: 190, Loss: 0.4637\n",
-      "Epoch: 200, Loss: 0.4475\n"
+      "Epoch: 010, Loss: 0.3915\n",
+      "Epoch: 020, Loss: 0.4360\n",
+      "Epoch: 030, Loss: 0.4600\n",
+      "Epoch: 040, Loss: 0.4451\n",
+      "Epoch: 050, Loss: 0.3700\n",
+      "Epoch: 060, Loss: 0.4771\n",
+      "Epoch: 070, Loss: 0.3564\n",
+      "Epoch: 080, Loss: 0.4742\n",
+      "Epoch: 090, Loss: 0.3338\n",
+      "Epoch: 100, Loss: 0.4036\n",
+      "Epoch: 110, Loss: 0.4355\n",
+      "Epoch: 120, Loss: 0.3808\n",
+      "Epoch: 130, Loss: 0.3316\n",
+      "Epoch: 140, Loss: 0.4301\n",
+      "Epoch: 150, Loss: 0.3803\n",
+      "Epoch: 160, Loss: 0.3119\n",
+      "Epoch: 170, Loss: 0.3221\n",
+      "Epoch: 180, Loss: 0.4529\n",
+      "Epoch: 190, Loss: 0.3087\n",
+      "Epoch: 200, Loss: 0.4509\n"
      ]
     }
    ],
@@ -195,7 +215,7 @@
     "\n",
     "\n",
     "model.train()\n",
-    "for epoch in range(1, 201):\n",
+    "for epoch in range(1, 800):\n",
     "    loss = train()\n",
     "    if epoch%10 == 0:\n",
     "      print(f'Epoch: {epoch:03d}, Loss: {loss:.4f}')"
@@ -217,14 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testna natancnost: 0.5152\n"
+      "Testna natancnost: 0.5179\n"
      ]
     }
    ],
@@ -248,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +317,7 @@
        "        [ 633, 1862, 2582,  ...,  598, 1473, 2706]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,19 +339,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Število vozlišč: 2708\n",
-      "Število povezav: 10556\n",
-      "Povprečno število povezav na vozlišče: 3.90\n",
-      "Izolirana vozlišča: False\n",
-      "Self-loops: False\n",
-      "Neusmerjen: True\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'torch_geometric'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtorch_geometric\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdata\u001b[39;00m \u001b[39mimport\u001b[39;00m Data\n\u001b[1;32m      4\u001b[0m data \u001b[39m=\u001b[39m Data(x\u001b[39m=\u001b[39mx_data, y\u001b[39m=\u001b[39my_data, edge_index\u001b[39m=\u001b[39mpovezave)\n\u001b[1;32m      6\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mŠtevilo vozlišč: \u001b[39m\u001b[39m{\u001b[39;00mdata\u001b[39m.\u001b[39mnum_nodes\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'torch_geometric'"
      ]
     }
    ],
@@ -363,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
